Add LLM evaluation framework: metrics, datasets, benchmarks, and runner
Implements a standardized evaluation framework for SameDiff LLM models with:
- 9 metrics (ExactMatch, F1, ANLS, BLEU, ROUGE, VQA Accuracy, Relaxed Accuracy, MC Accuracy)
- Dataset loaders (JSONL, CSV, HuggingFace API, Custom)
- 6 LLM benchmarks (MMLU, HellaSwag, ARC, TruthfulQA, Winogrande, GSM8K) with validated HF schemas
- EvalRunner orchestration, EvalConfig, EvalResult with JSON export
- AnswerExtractor utilities for multiple-choice, number, and yes/no extraction
- Restored PerplexityEvaluator and GenerationQualityValidator
- 39 tests covering all metrics, datasets, config, and answer extraction

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>