@@ -25,378 +25,299 @@ import org.eclipse.deeplearning4j.llm.eval.dataset.EvalSample;
 import org.eclipse.deeplearning4j.llm.eval.dataset.JsonlDataset;
 import org.eclipse.deeplearning4j.llm.eval.metrics.*;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
-import java.io.*;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Tests for the evaluation framework: metrics, datasets, and answer extraction.
+ * Tests for the evaluation framework: metrics, datasets, answer extraction, config, and results.
  */
 public class EvalFrameworkTest {
 
-    // ======================== Exact Match ========================
+    // ==================== ExactMatchMetric ====================
+
+    @Test
+    public void testExactMatchIdentical() {
+        ExactMatchMetric metric = new ExactMatchMetric(true);
+        assertEquals(1.0, metric.score("Paris", List.of("Paris")), 1e-9);
+    }
 
     @Test
     public void testExactMatchNormalized() {
         ExactMatchMetric metric = new ExactMatchMetric(true);
-        assertEquals("exact_match", metric.name());
-        assertTrue(metric.higherIsBetter());
-
-        // Exact match after normalization
-        assertEquals(1.0, metric.score("The Paris", List.of("paris")));
-        assertEquals(1.0, metric.score("  PARIS  ", List.of("paris")));
-
-        // No match
-        assertEquals(0.0, metric.score("London", List.of("Paris")));
-
-        // Multiple references - match any
-        assertEquals(1.0, metric.score("Paris", List.of("London", "Paris")));
+        // normalize: lowercase, strip punct, remove articles, collapse whitespace
+        assertEquals(1.0, metric.score("The answer is: Paris!", List.of("answer is paris")), 1e-9);
     }
 
     @Test
-    public void testExactMatchNoNormalization() {
+    public void testExactMatchNoNormalize() {
         ExactMatchMetric metric = new ExactMatchMetric(false);
-        assertEquals(0.0, metric.score("paris", List.of("Paris")));
-        assertEquals(1.0, metric.score("Paris", List.of("Paris")));
+        assertEquals(0.0, metric.score("paris", List.of("Paris")), 1e-9);
     }
 
     @Test
-    public void testExactMatchEdgeCases() {
-        ExactMatchMetric metric = new ExactMatchMetric();
-        assertEquals(0.0, metric.score(null, List.of("x")));
-        assertEquals(0.0, metric.score("x", null));
-        assertEquals(0.0, metric.score("x", Collections.emptyList()));
+    public void testExactMatchMultipleReferences() {
+        ExactMatchMetric metric = new ExactMatchMetric(true);
+        assertEquals(1.0, metric.score("NYC", List.of("New York", "NYC", "New York City")), 1e-9);
     }
 
-    // ======================== F1 Metric ========================
+    @Test
+    public void testExactMatchMismatch() {
+        ExactMatchMetric metric = new ExactMatchMetric(true);
+        assertEquals(0.0, metric.score("London", List.of("Paris")), 1e-9);
+    }
+
+    // ==================== F1Metric ====================
 
     @Test
     public void testF1PerfectMatch() {
         F1Metric metric = new F1Metric();
-        assertEquals("f1", metric.name());
-
-        // Perfect match
-        assertEquals(1.0, metric.score("the cat sat on the mat",
-                List.of("the cat sat on the mat")));
+        assertEquals(1.0, metric.score("the quick brown fox", List.of("the quick brown fox")), 1e-9);
     }
 
     @Test
     public void testF1PartialOverlap() {
         F1Metric metric = new F1Metric();
-
-        // "big red cat" vs "big blue dog" → after normalize: "big red cat" vs "big blue dog"
-        // 1 common token ("big"), P=1/3, R=1/3, F1=1/3
-        double score = metric.score("big red cat", List.of("big blue dog"));
-        assertEquals(1.0 / 3.0, score, 0.01);
+        // After SQuAD normalization: "big red cat" vs "big blue dog"
+        // Tokens: {big, red, cat} vs {big, blue, dog}
+        // Common: {big} = 1
+        // Precision = 1/3, Recall = 1/3, F1 = 2*(1/3)*(1/3) / (1/3+1/3) = 1/3
+        double f1 = metric.score("big red cat", List.of("big blue dog"));
+        assertEquals(1.0 / 3.0, f1, 1e-9);
     }
 
     @Test
     public void testF1NoOverlap() {
         F1Metric metric = new F1Metric();
-        assertEquals(0.0, metric.score("cat", List.of("dog")));
+        assertEquals(0.0, metric.score("cat", List.of("dog")), 1e-9);
     }
 
-    @Test
-    public void testF1MultipleReferences() {
-        F1Metric metric = new F1Metric();
-        // Should return max F1 across references
-        double score = metric.score("Paris is the capital",
-                List.of("Paris is the capital of France", "Paris"));
-        assertTrue(score > 0.5);
-    }
-
-    // ======================== ANLS Metric ========================
+    // ==================== AnlsMetric ====================
 
     @Test
-    public void testAnlsPerfectMatch() {
+    public void testAnlsExactMatch() {
         AnlsMetric metric = new AnlsMetric();
-        assertEquals("anls", metric.name());
-        assertEquals(1.0, metric.score("hello", List.of("hello")));
+        assertEquals(1.0, metric.score("hello", List.of("hello")), 1e-9);
     }
 
     @Test
-    public void testAnlsCloseMatch() {
+    public void testAnlsSimilar() {
         AnlsMetric metric = new AnlsMetric();
-        // "helo" vs "hello" → edit distance 1, NLS = 1 - 1/5 = 0.8 > 0.5 threshold
-        double score = metric.score("helo", List.of("hello"));
-        assertTrue(score > 0.7, "Expected ANLS > 0.7, got " + score);
+        // "hello" vs "helo" => distance=1, maxLen=5, NLS=0.8, above threshold 0.5
+        double score = metric.score("hello", List.of("helo"));
+        assertEquals(0.8, score, 1e-9);
     }
 
     @Test
     public void testAnlsBelowThreshold() {
         AnlsMetric metric = new AnlsMetric();
-        // Very different strings should score 0 (below 0.5 threshold)
-        assertEquals(0.0, metric.score("xyz", List.of("abcdefgh")));
+        // Very different strings -> NLS < 0.5 -> score = 0
+        assertEquals(0.0, metric.score("abcdef", List.of("xyz")), 1e-9);
     }
 
     @Test
     public void testLevenshteinDistance() {
-        assertEquals(0, AnlsMetric.levenshteinDistance("", ""));
-        assertEquals(3, AnlsMetric.levenshteinDistance("", "abc"));
-        assertEquals(3, AnlsMetric.levenshteinDistance("abc", ""));
-        assertEquals(1, AnlsMetric.levenshteinDistance("cat", "bat"));
+        assertEquals(0, AnlsMetric.levenshteinDistance("test", "test"));
+        assertEquals(1, AnlsMetric.levenshteinDistance("test", "tests"));
         assertEquals(3, AnlsMetric.levenshteinDistance("kitten", "sitting"));
     }
 
-    // ======================== BLEU Metric ========================
+    // ==================== BleuMetric ====================
 
     @Test
     public void testBleuPerfectMatch() {
         BleuMetric metric = new BleuMetric(4);
-        assertEquals("bleu-4", metric.name());
-
-        double score = metric.score(
-                "the cat is on the mat",
-                List.of("the cat is on the mat"));
-        assertEquals(1.0, score, 0.01);
+        double score = metric.score("the cat sat on the mat", List.of("the cat sat on the mat"));
+        assertEquals(1.0, score, 1e-9);
     }
 
     @Test
     public void testBleuPartialMatch() {
-        BleuMetric metric = new BleuMetric(1); // BLEU-1 for simplicity
-        double score = metric.score(
-                "the the the the",
-                List.of("the cat is on the mat"));
-        // Clipped: "the" appears 2x in ref, 4x in pred → clipped=2, total=4 → precision=0.5
-        assertTrue(score > 0.0);
-        assertTrue(score <= 1.0);
-    }
-
-    @Test
-    public void testBleuNoOverlap() {
         BleuMetric metric = new BleuMetric(1);
-        assertEquals(0.0, metric.score("xyz abc", List.of("foo bar baz")));
-    }
-
-    // ======================== ROUGE Metric ========================
-
-    @Test
-    public void testRouge1F1() {
-        RougeMetric metric = new RougeMetric(RougeMetric.RougeType.ROUGE_1);
-        assertEquals("rouge-1-f1", metric.name());
-
-        double score = metric.score(
-                "the cat sat on the mat",
-                List.of("the cat sat on the mat"));
-        assertEquals(1.0, score, 0.01);
+        // BLEU-1 only checks unigram precision
+        double score = metric.score("the cat sat", List.of("the cat sat on the mat"));
+        assertTrue(score > 0.0, "BLEU-1 should be positive for partial match");
+        assertTrue(score <= 1.0, "BLEU should not exceed 1.0");
     }
 
     @Test
-    public void testRougeLF1() {
-        RougeMetric metric = new RougeMetric(RougeMetric.RougeType.ROUGE_L);
-        assertEquals("rouge-l-f1", metric.name());
+    public void testBleuNoMatch() {
+        BleuMetric metric = new BleuMetric(4);
+        assertEquals(0.0, metric.score("abc def", List.of("xyz uvw")), 1e-9);
+    }
 
-        // Partial overlap via LCS
-        double score = metric.score(
-                "the cat sat",
-                List.of("the cat sat on the mat"));
-        assertTrue(score > 0.5, "Expected ROUGE-L > 0.5, got " + score);
+    // ==================== RougeMetric ====================
+
+    @Test
+    public void testRougeLPerfectMatch() {
+        RougeMetric metric = new RougeMetric(RougeMetric.RougeType.ROUGE_L, RougeMetric.ScoreType.F1);
+        assertEquals(1.0, metric.score("the cat sat", List.of("the cat sat")), 1e-9);
     }
 
     @Test
-    public void testRougeRecall() {
+    public void testRouge1PartialOverlap() {
         RougeMetric metric = new RougeMetric(RougeMetric.RougeType.ROUGE_1, RougeMetric.ScoreType.RECALL);
-        assertEquals("rouge-1-recall", metric.name());
+        // pred: "the cat", ref: "the cat sat on"
+        // unigram overlap: {the, cat} = 2, ref total = 4
+        // recall = 2/4 = 0.5
+        double score = metric.score("the cat", List.of("the cat sat on"));
+        assertEquals(0.5, score, 1e-9);
     }
 
-    // ======================== VQA Accuracy ========================
+    // ==================== VqaAccuracyMetric ====================
 
     @Test
-    public void testVqaAccuracy() {
+    public void testVqaAccuracyAllMatch() {
         VqaAccuracyMetric metric = new VqaAccuracyMetric();
-        assertEquals("vqa_accuracy", metric.name());
-
-        // 3+ matching annotators → score = 1.0
-        assertEquals(1.0, metric.score("yes",
-                List.of("yes", "yes", "yes", "no", "no")));
-
-        // 1 matching annotator → score = 1/3
-        assertEquals(1.0 / 3.0, metric.score("maybe",
-                List.of("maybe", "yes", "no")), 0.01);
-
-        // 0 matching → score = 0
-        assertEquals(0.0, metric.score("xyz", List.of("yes", "no")));
+        // 4 matching refs -> min(4/3, 1.0) = 1.0
+        assertEquals(1.0, metric.score("yes", List.of("yes", "yes", "yes", "yes")), 1e-9);
     }
 
-    // ======================== Relaxed Accuracy ========================
+    @Test
+    public void testVqaAccuracyPartialMatch() {
+        VqaAccuracyMetric metric = new VqaAccuracyMetric();
+        // 2 matching out of 5 refs -> min(2/3, 1.0) = 0.6667
+        double score = metric.score("cat", List.of("cat", "dog", "cat", "bird", "fish"));
+        assertEquals(2.0 / 3.0, score, 1e-9);
+    }
+
+    // ==================== RelaxedAccuracyMetric ====================
 
     @Test
     public void testRelaxedAccuracyExactMatch() {
         RelaxedAccuracyMetric metric = new RelaxedAccuracyMetric();
-        assertEquals("relaxed_accuracy", metric.name());
-        assertEquals(1.0, metric.score("42", List.of("42")));
+        assertEquals(1.0, metric.score("42", List.of("42")), 1e-9);
     }
 
     @Test
-    public void testRelaxedAccuracyNumericTolerance() {
+    public void testRelaxedAccuracyWithinTolerance() {
         RelaxedAccuracyMetric metric = new RelaxedAccuracyMetric(0.05);
-        // 42 vs 43: |42-43|/43 = 2.3% < 5%
-        assertEquals(1.0, metric.score("42", List.of("43")));
-        // 42 vs 50: |42-50|/50 = 16% > 5%
-        assertEquals(0.0, metric.score("42", List.of("50")));
+        // 104 vs 100: 4% error, within 5% tolerance
+        assertEquals(1.0, metric.score("104", List.of("100")), 1e-9);
     }
 
     @Test
-    public void testRelaxedAccuracyFormattedNumbers() {
+    public void testRelaxedAccuracyOutsideTolerance() {
         RelaxedAccuracyMetric metric = new RelaxedAccuracyMetric(0.05);
-        // Should handle $, commas, %
-        assertEquals(1.0, metric.score("$1,000", List.of("1000")));
-        assertEquals(1.0, metric.score("50%", List.of("50")));
+        // 110 vs 100: 10% error, outside 5% tolerance
+        assertEquals(0.0, metric.score("110", List.of("100")), 1e-9);
     }
 
-    // ======================== MC Accuracy ========================
+    // ==================== MultipleChoiceAccuracyMetric ====================
 
     @Test
-    public void testMultipleChoiceAccuracy() {
+    public void testMCAccuracySingleLetter() {
         MultipleChoiceAccuracyMetric metric = new MultipleChoiceAccuracyMetric();
-        assertEquals("mc_accuracy", metric.name());
-
-        assertEquals(1.0, metric.score("A", List.of("A")));
-        assertEquals(1.0, metric.score("The answer is B", List.of("B")));
-        assertEquals(1.0, metric.score("(C)", List.of("C")));
-        assertEquals(0.0, metric.score("A", List.of("B")));
-    }
-
-    // ======================== Metric Aggregation ========================
-
-    @Test
-    public void testMetricAggregation() {
-        EvalMetric metric = new ExactMatchMetric();
-        assertEquals(0.5, metric.aggregate(List.of(1.0, 0.0, 1.0, 0.0)), 0.01);
-        assertEquals(1.0, metric.aggregate(List.of(1.0, 1.0)), 0.01);
-        assertEquals(0.0, metric.aggregate(List.of(0.0, 0.0)), 0.01);
-        assertEquals(0.0, metric.aggregate(Collections.emptyList()));
-    }
-
-    // ======================== Custom Dataset ========================
-
-    @Test
-    public void testCustomDataset() {
-        CustomDataset dataset = CustomDataset.builder("test-qa")
-                .addSample("1", "What is 2+2?", "4")
-                .addSample("2", "Capital of France?", "Paris")
-                .addMultipleChoice("3", "Which is a fruit?",
-                        List.of("Apple", "Chair", "Book"), "A")
-                .build();
-
-        assertEquals("test-qa", dataset.name());
-        assertEquals(3, dataset.size());
-
-        EvalSample sample = dataset.get(0);
-        assertEquals("1", sample.getId());
-        assertEquals("What is 2+2?", sample.getInput());
-        assertEquals(List.of("4"), sample.getReferences());
-
-        EvalSample mcSample = dataset.get(2);
-        assertEquals(List.of("Apple", "Chair", "Book"), mcSample.getChoices());
-        assertEquals(List.of("A"), mcSample.getReferences());
-
-        // Test iteration
-        int count = 0;
-        for (EvalSample s : dataset) {
-            count++;
-        }
-        assertEquals(3, count);
-
-        // Test splits
-        assertEquals(3, dataset.getSplit("test").size());
-        assertEquals(0, dataset.getSplit("train").size());
-    }
-
-    // ======================== JSONL Dataset ========================
-
-    @Test
-    public void testJsonlDatasetLoading() throws Exception {
-        // Create a temp JSONL file
-        String jsonl = String.join("\n",
-                "{\"id\": \"q1\", \"question\": \"What color is the sky?\", \"answer\": \"blue\"}",
-                "{\"id\": \"q2\", \"question\": \"2+2=\", \"answer\": \"4\", \"subject\": \"math\"}",
-                "{\"id\": \"q3\", \"question\": \"Best color?\", \"answers\": [\"red\", \"blue\"]}"
-        );
-
-        File tempFile = File.createTempFile("test-dataset", ".jsonl");
-        tempFile.deleteOnExit();
-        Files.writeString(tempFile.toPath(), jsonl, StandardCharsets.UTF_8);
-
-        JsonlDataset dataset = new JsonlDataset("test", tempFile);
-        assertEquals("test", dataset.name());
-        assertEquals(3, dataset.size());
-
-        EvalSample s1 = dataset.get(0);
-        assertEquals("q1", s1.getId());
-        assertEquals("What color is the sky?", s1.getInput());
-        assertEquals(List.of("blue"), s1.getReferences());
-
-        EvalSample s2 = dataset.get(1);
-        assertEquals("math", s2.getSubject());
-
-        EvalSample s3 = dataset.get(2);
-        assertEquals(List.of("red", "blue"), s3.getReferences());
+        assertEquals(1.0, metric.score("A", List.of("A")), 1e-9);
     }
 
     @Test
-    public void testJsonlDatasetCustomMapping() throws Exception {
-        String jsonl = "{\"q\": \"What is 1+1?\", \"a\": \"2\", \"cat\": \"arithmetic\"}";
-
-        File tempFile = File.createTempFile("test-custom", ".jsonl");
-        tempFile.deleteOnExit();
-        Files.writeString(tempFile.toPath(), jsonl, StandardCharsets.UTF_8);
-
-        JsonlDataset.FieldMapping mapping = JsonlDataset.FieldMapping.builder()
-                .inputField("q")
-                .referenceField("a")
-                .subjectField("cat")
-                .build();
-
-        JsonlDataset dataset = new JsonlDataset("custom", tempFile, mapping);
-        assertEquals(1, dataset.size());
-        assertEquals("What is 1+1?", dataset.get(0).getInput());
-        assertEquals(List.of("2"), dataset.get(0).getReferences());
-        assertEquals("arithmetic", dataset.get(0).getSubject());
+    public void testMCAccuracyAnswerIsPattern() {
+        MultipleChoiceAccuracyMetric metric = new MultipleChoiceAccuracyMetric();
+        assertEquals(1.0, metric.score("The answer is B", List.of("B")), 1e-9);
     }
 
-    // ======================== Answer Extraction ========================
+    @Test
+    public void testMCAccuracyWrong() {
+        MultipleChoiceAccuracyMetric metric = new MultipleChoiceAccuracyMetric();
+        assertEquals(0.0, metric.score("A", List.of("C")), 1e-9);
+    }
+
+    // ==================== AnswerExtractor ====================
 
     @Test
     public void testExtractMultipleChoice() {
         assertEquals("A", AnswerExtractor.extractMultipleChoice("A"));
         assertEquals("B", AnswerExtractor.extractMultipleChoice("The answer is B"));
-        assertEquals("C", AnswerExtractor.extractMultipleChoice("The answer is (C)"));
-        assertEquals("D", AnswerExtractor.extractMultipleChoice("D. Something"));
+        assertEquals("C", AnswerExtractor.extractMultipleChoice("C. Some explanation"));
         assertNull(AnswerExtractor.extractMultipleChoice(""));
-        assertNull(AnswerExtractor.extractMultipleChoice(null));
     }
 
     @Test
     public void testExtractNumber() {
-        assertEquals("42", AnswerExtractor.extractNumber("#### 42"));
-        assertEquals("1000", AnswerExtractor.extractNumber("#### 1,000"));
+        assertEquals("42", AnswerExtractor.extractNumber("Let me compute... #### 42"));
         assertEquals("3.14", AnswerExtractor.extractNumber("The answer is 3.14"));
         assertNull(AnswerExtractor.extractNumber("no numbers here"));
-        assertNull(AnswerExtractor.extractNumber(null));
     }
 
     @Test
     public void testExtractYesNo() {
-        assertEquals("yes", AnswerExtractor.extractYesNo("Yes, it is."));
-        assertEquals("no", AnswerExtractor.extractYesNo("No, it isn't."));
+        assertEquals("yes", AnswerExtractor.extractYesNo("Yes, that is correct"));
+        assertEquals("no", AnswerExtractor.extractYesNo("No, I disagree"));
         assertNull(AnswerExtractor.extractYesNo("maybe"));
-        assertNull(AnswerExtractor.extractYesNo(null));
     }
 
     @Test
     public void testNormalizeAnswer() {
-        assertEquals("paris", AnswerExtractor.normalizeAnswer("The Paris!"));
-        assertEquals("42", AnswerExtractor.normalizeAnswer("  42  "));
+        assertEquals("answer is paris", AnswerExtractor.normalizeAnswer("The answer is: Paris!"));
     }
 
-    // ======================== EvalConfig ========================
+    // ==================== CustomDataset ====================
+
+    @Test
+    public void testCustomDatasetBuilder() {
+        CustomDataset dataset = CustomDataset.builder("test-ds")
+                .addSample("1", "What is 1+1?", "2")
+                .addSample("2", "Capital of France?", "Paris")
+                .addMultipleChoice("3", "Color of sky?", List.of("Red", "Blue", "Green"), "B")
+                .build();
+
+        assertEquals("test-ds", dataset.name());
+        assertEquals(3, dataset.size());
+        assertEquals("What is 1+1?", dataset.get(0).getInput());
+        assertEquals(List.of("2"), dataset.get(0).getReferences());
+        assertEquals(List.of("Red", "Blue", "Green"), dataset.get(2).getChoices());
+    }
+
+    @Test
+    public void testCustomDatasetIteration() {
+        CustomDataset dataset = CustomDataset.builder("iter-test")
+                .addSample("1", "q1", "a1")
+                .addSample("2", "q2", "a2")
+                .build();
+
+        int count = 0;
+        for (EvalSample sample : dataset) {
+            assertNotNull(sample.getInput());
+            count++;
+        }
+        assertEquals(2, count);
+    }
+
+    // ==================== JsonlDataset ====================
+
+    @Test
+    public void testJsonlDatasetLoading(@TempDir Path tempDir) throws IOException {
+        File jsonlFile = tempDir.resolve("test.jsonl").toFile();
+        try (FileWriter writer = new FileWriter(jsonlFile)) {
+            writer.write("{\"question\": \"What is 2+2?\", \"answer\": \"4\"}\n");
+            writer.write("{\"question\": \"Capital of Japan?\", \"answer\": \"Tokyo\"}\n");
+            writer.write("{\"question\": \"Largest planet?\", \"answer\": \"Jupiter\"}\n");
+        }
+
+        JsonlDataset.FieldMapping mapping = JsonlDataset.FieldMapping.builder()
+                .inputField("question")
+                .referenceField("answer")
+                .build();
+
+        JsonlDataset dataset = new JsonlDataset("test-jsonl", jsonlFile, mapping);
+
+        assertEquals("test-jsonl", dataset.name());
+        assertEquals(3, dataset.size());
+        assertEquals("What is 2+2?", dataset.get(0).getInput());
+        assertEquals(List.of("4"), dataset.get(0).getReferences());
+        assertEquals("Tokyo", dataset.get(1).getReferences().get(0));
+    }
+
+    // ==================== EvalConfig ====================
 
     @Test
     public void testEvalConfigDefaults() {
@@ -409,39 +330,97 @@ public class EvalFrameworkTest {
         assertNull(config.getOutputFile());
     }
 
-    // ======================== EvalResult ========================
-
     @Test
-    public void testEvalResultSummary() {
-        EvalResult result = EvalResult.builder()
-                .benchmarkName("test")
-                .primaryScore(0.75)
-                .totalSamples(100)
-                .correctSamples(75)
-                .evaluationTimeMs(1000)
+    public void testEvalConfigCustom() {
+        EvalConfig config = EvalConfig.builder()
+                .numFewShot(5)
+                .maxSamples(100)
+                .maxNewTokens(512)
+                .batchSize(8)
+                .logSamples(true)
                 .build();
 
-        assertEquals(0.75, result.accuracy(), 0.01);
-        String summary = result.summary();
-        assertTrue(summary.contains("test"));
-        assertTrue(summary.contains("0.7500"));
-        assertTrue(summary.contains("75/100"));
+        assertEquals(5, config.getNumFewShot());
+        assertEquals(100, config.getMaxSamples());
+        assertEquals(512, config.getMaxNewTokens());
+        assertEquals(8, config.getBatchSize());
+        assertTrue(config.isLogSamples());
     }
 
-    // ======================== SampleResult ========================
+    // ==================== EvalResult ====================
 
     @Test
-    public void testSampleResult() {
-        SampleResult result = SampleResult.builder()
-                .sampleId("s1")
-                .prediction("Paris")
-                .references(List.of("Paris", "paris"))
-                .score(1.0)
-                .correct(true)
+    public void testEvalResultAccuracy() {
+        EvalResult result = EvalResult.builder()
+                .benchmarkName("test")
+                .primaryScore(0.85)
+                .totalSamples(100)
+                .correctSamples(85)
+                .evaluationTimeMs(5000)
+                .metricScores(Map.of("exact_match", 0.85))
                 .build();
 
-        assertEquals("s1", result.getSampleId());
-        assertEquals("Paris", result.getPrediction());
-        assertTrue(result.isCorrect());
+        assertEquals(0.85, result.accuracy(), 1e-9);
+        assertTrue(result.summary().contains("test"));
+        assertTrue(result.summary().contains("85"));
+    }
+
+    @Test
+    public void testEvalResultWriteJson(@TempDir Path tempDir) throws IOException {
+        EvalResult result = EvalResult.builder()
+                .benchmarkName("json-test")
+                .primaryScore(0.75)
+                .totalSamples(50)
+                .correctSamples(37)
+                .evaluationTimeMs(3000)
+                .metricScores(Map.of("exact_match", 0.74))
+                .build();
+
+        File outputFile = tempDir.resolve("result.json").toFile();
+        result.writeJson(outputFile);
+        assertTrue(outputFile.exists());
+        assertTrue(outputFile.length() > 0);
+    }
+
+    // ==================== Metric Aggregation ====================
+
+    @Test
+    public void testMetricAggregation() {
+        ExactMatchMetric metric = new ExactMatchMetric(true);
+        double aggregated = metric.aggregate(List.of(1.0, 0.0, 1.0, 1.0));
+        assertEquals(0.75, aggregated, 1e-9);
+    }
+
+    // ==================== Metric Properties ====================
+
+    @Test
+    public void testMetricNames() {
+        assertEquals("exact_match", new ExactMatchMetric().name());
+        assertEquals("f1", new F1Metric().name());
+        assertEquals("anls", new AnlsMetric().name());
+        assertEquals("bleu-4", new BleuMetric().name());
+        assertEquals("bleu-1", new BleuMetric(1).name());
+        assertEquals("rouge-l-f1", new RougeMetric().name());
+        assertEquals("rouge-1-recall", new RougeMetric(RougeMetric.RougeType.ROUGE_1, RougeMetric.ScoreType.RECALL).name());
+        assertEquals("vqa_accuracy", new VqaAccuracyMetric().name());
+        assertEquals("relaxed_accuracy", new RelaxedAccuracyMetric().name());
+        assertEquals("mc_accuracy", new MultipleChoiceAccuracyMetric().name());
+    }
+
+    @Test
+    public void testAllMetricsHigherIsBetter() {
+        List<EvalMetric> metrics = List.of(
+                new ExactMatchMetric(),
+                new F1Metric(),
+                new AnlsMetric(),
+                new BleuMetric(),
+                new RougeMetric(),
+                new VqaAccuracyMetric(),
+                new RelaxedAccuracyMetric(),
+                new MultipleChoiceAccuracyMetric()
+        );
+        for (EvalMetric metric : metrics) {
+            assertTrue(metric.higherIsBetter(), metric.name() + " should have higherIsBetter=true");
+        }
     }
 }
